# sql

./: Cargo.toml  README.md
doc/: ast.puml
eg/ddl/: create.sql  product.sql
src/: lib.rs
src/sql/: sql.pest
src/sql/ast/: comment.rs  mod.rs  sql.rs
src/sql/ast/ddl/: anchor.rs  fauna.rs  mod.rs  seed.rs  stem.rs
src/sql/ast/dml/: mod.rs  nutrients.rs  sow.rs
src/sql/ast/dql/: mod.rs  op.rs  sample.rs  sift.rs  twigs.rs
src/sql/parser/: parser.rs  tree.rs
