[package]
name = "sql"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
sc_dsl = { git = "https://github.com/sc-land/dsl.git" }
ir = { git = "https://github.com/sc-land/ir.git" }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
